--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="izstopna">Vpisi izstopno postajo</string>
     <string name="button_new">Novo</string>
     <string name="strigDnevi">Izberi dneve: </string>
+    <string name="textViewUra">Izberi čas pred končno postajo: </string>
+    <string name="buttonPreklici">Prekliči</string>
+    <string name="buttonKoncaj">Končaj</string>
 
     <string-array name="postaje">
         <item>Ajdovščina</item>
@@ -280,6 +283,15 @@
         <item>5 min</item>
         <item>10 min</item>
         <item>15 min</item>
+        <item>20 min</item>
+        <item>25 min</item>
+        <item>30 min</item>
+        <item>35 min</item>
+        <item>40 min</item>
+        <item>45 min</item>
+        <item>50 min</item>
+        <item>55 min</item>
+        <item>60 min</item>
     </string-array>
 
     <string-array name="dnevi">
